# multithreading

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: load_test.cpp  results.csv  results.md  run_benchmarks.sh
client/: client.cpp
docs/: DOCUMENTATION.md  error-handling.md  load-testing.md  platform-support.md  profiling.md  stage1_mutex_vs_atomic.md  stage2_bounded_queue.md  stage3_thread_pool.md  stage4_deadlock_debugging.md  stage5_tcp_server.md  troubleshooting.md
include/: bounded_queue.hpp  client_connection.hpp  job.hpp  server.hpp  statistics.hpp  thread_pool.hpp
src/: 01_race_condition.cpp  02_synchronised.cpp  03_bounded_queue.hpp  03_queue_test.cpp  05_deadlock_demo.cpp  client_connection.cpp  job_processor.cpp  main.cpp  server.cpp  stage4_thread_pool_demo.cpp  statistics.cpp  thread_pool.cpp
tests/: client_connection_test.cpp  queue_test.cpp  server_test.cpp  thread_pool_test.cpp
